--- a/myPHPcms/doc/README
+++ b/myPHPcms/doc/README
@@ -15,6 +15,8 @@ Files
 				that these tasks need to be achieved in.
 * Coding guidelines.txt		Document that specifies how code for
 				myPHPcms is to be written
+* Templating Module.txt		Detailed design document for Templating
+				module
 * README			this file.
 				
 Directories
