Updated due to addition of Release Schedule.txt

--- a/myPHPcms/doc/README
+++ b/myPHPcms/doc/README
@@ -24,6 +24,8 @@ Files
 * Detailed Design template.txt	Template to make the production of 20
 				detailed design documents a little bit
 				easier !
+* Release Schedule.txt		Details functionality on a release by
+				release basis.
 * README			this file.
 				
 Directories
